--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+# IDEA files
+**/.idea/
+.idea
+
+# Mvn files
+**/.mvn
+.mvn
+
 # Compiled class file
 *.class
 
+# Target foled
+**/target/
+
 # Log file
 *.log
+
+# iml file
+**/*.iml
+*.iml
 
 # BlueJ files
 *.ctxt
